module, intrinsic cpu_time, implicit none, intent

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(lbfgsb PRIVATE blas1.f dpmeps.f linpack.f src.f timer.f)
+target_sources(lbfgsb PRIVATE blas1.f dpmeps.f linpack.f src.f)
